refactoring campus